# Public-Fund

./: README.md  public-fund.cabal  test_results.md
app/: Main.hs
app/Offchain/: Emulator.hs
app/Onchain/: PublicFund.hs  PublicFundEmulatorTest.hs
app/offchain/: Emulator.hs
assets/: sample_fund_datum.cbor
doc/: doc.md
src/: PublicFund.hs
src/app/: Main.hs
